# unix-learning

./: .gitignore  CMakeLists.txt  README.md
src/chapter1/cat/: cat.c
src/chapter1/error/: error.c
src/chapter1/ls/: ls.c
src/chapter1/noio_cat/: cat.c
src/chapter1/process/: process.c
src/chapter1/sh/: sh.c
src/chapter1/signal_sh/: sh.c
src/chapter1/tree/: tree.c
src/chapter1/user/: user.c
src/chapter2/hello/: hello.c  main.c
src/chapter2/open_max/: open_max.c
src/chapter2/restrict/: restrict.c
src/chapter2/type/: types.c
src/chapter3/cp/: cp.c
src/chapter3/dup2/: dup2.c
src/chapter3/fcntl/: fcntl.c
src/chapter3/file_hole/: file_hole.c
src/chapter3/lseek/: lseek.c
src/chapter3/read/: read.c
src/chapter3/set_flag/: set_flag.c
src/chapter3/stdout_stderror/: outanderror.c
src/chapter3/test_lseek/: lseek.c
src/chapter4/ls_l/: ls_l.c
utils/: CMakeLists.txt
utils/include/: apue.h
utils/src/: apue.c
